# showdown_agent

./: pyproject.toml  requirements.txt
showdown_agent/scripts/: ENHANCED_DEFENSIVE_CALCULATIONS.md  KO_TRACKING_README.md  MOVE_EFFECTIVENESS_ANALYSIS_README.md  MOVE_MEMORY_README.md  README_CHOICE_SCARF_DETECTION.md  battle_attributes.py  battle_htho884_vs_second.py  battle_vs_bot.py  battle_vs_simple_uber.py  challenge_simple_uber.py  choice_scarf_utils.py  code_improvements_summary.md  comp.py  compare_players.py  demo_ko_tracking.py  effective_moves_guide.md  eval.py  eval_v1.py  eval_vs_simpleboy.py  fight_simple_uber.py  integration_example.py  pokemon_performance_stats.txt  pokemon_performance_stats_v1.txt  test_choice_scarf_detection.py  test_debug_moves.py  test_effective_moves.py  test_effectiveness_analysis.py  test_enhanced_defensive_calculations.py  test_flutter_vs_kingambit.py  test_memory.txt  test_move_memory.py  test_opponent_move_tracking.py  test_recover_usage.py  test_zacian_vs_kingambit.py  tournament.py  v1_v2_v3_comparison.py  v1_v2_v3_vs_second.py  verses.py
showdown_agent/scripts/bots/: simple.py
showdown_agent/scripts/players/: V1.py  V2.py  V3.py  htho884.py  htho884_2.py  second.py  simple_uber.py  simpleboy.py
showdown_agent/scripts/replays/V1/: V1 - battle-gen9ubers-249511.html  V1 - battle-gen9ubers-249512.html  V1 - battle-gen9ubers-249513.html  V1 - battle-gen9ubers-249514.html  V1 - battle-gen9ubers-249515.html  V1 - battle-gen9ubers-249516.html  V1 - battle-gen9ubers-249517.html  (+4154 more)
showdown_agent/scripts/results/: marking_results.txt
(+131289 files in other folders)
